--- a/resources/view/image_scene_view.fxml
+++ b/resources/view/image_scene_view.fxml
@@ -8,7 +8,7 @@
 
 <GridPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.ImageSceneController"
+            fx:controller="presentation.controller.ImageSceneController"
             prefHeight="400.0" prefWidth="600.0">
 
 </GridPane>
