--- a/resources/view/menu_scene_view.fxml
+++ b/resources/view/menu_scene_view.fxml
@@ -1,21 +1,85 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.*?>
-<GridPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-          fx:controller="presentation.controller.MenuSceneController" alignment="center" hgap="10" vgap="10">
-    <padding>
-        <Insets top="25" right="50" bottom="10" left="50"/>
-    </padding>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-    <HBox spacing="10" alignment="bottom_right" GridPane.columnIndex="1" GridPane.rowIndex="0">
-        <Button text="Trabajo Practico 1" onAction="#onClickButtonTP1"/>
-    </HBox>
-    <HBox spacing="10" alignment="bottom_right" GridPane.columnIndex="1" GridPane.rowIndex="1">
-        <Button text="Trabajo Practico 2" onAction="#onClickButtonTP2"/>
-    </HBox>
-    <HBox spacing="10" alignment="bottom_right" GridPane.columnIndex="1" GridPane.rowIndex="2">
-        <Button text="Trabajo Practico 3" onAction="#onClickButtonTP3"/>
-    </HBox>
-</GridPane>
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.MenuSceneController">
+   <children>
+      <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="401.0" prefWidth="603.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="603.0" minWidth="10.0" prefWidth="603.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="0.0" prefWidth="0.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="268.0" minHeight="10.0" prefHeight="268.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="127.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Pane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <HBox layoutX="48.0" layoutY="109.0" prefHeight="23.0" prefWidth="328.0">
+                     <children>
+                        <Pane>
+                           <children>
+                              <RadioButton mnemonicParsing="false" text="raw" wrapText="true" />
+                           </children>
+                        </Pane>
+                        <Pane prefWidth="70.0">
+                           <children>
+                              <RadioButton layoutX="15.0" mnemonicParsing="false" text="pgm" wrapText="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <RadioButton layoutX="15.0" mnemonicParsing="false" text="ppm" wrapText="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <RadioButton layoutX="15.0" mnemonicParsing="false" text="bmp" wrapText="true" />
+                           </children>
+                        </Pane>
+                     </children>
+                  </HBox>
+                  <Pane layoutX="48.0" layoutY="58.0">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#saveImage" text="Cargar imagen" />
+                     </children>
+                  </Pane>
+                  <Button layoutX="181.0" layoutY="58.0" mnemonicParsing="false" onAction="#showImageScene" text="Mostrar imagen" />
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+               <children>
+                  <GridPane layoutY="-19.0" prefHeight="25.0" prefWidth="603.0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Pane prefHeight="25.0" prefWidth="236.0">
+                           <children>
+                              <Button contentDisplay="CENTER" layoutX="35.0" mnemonicParsing="false" onAction="#onClickButtonTP1" text="TP 1" textAlignment="CENTER" />
+                              <Button layoutX="84.0" mnemonicParsing="false" onAction="#onClickButtonTP2" text="TP2" />
+                              <Button layoutX="129.0" mnemonicParsing="false" onAction="#onClickButtonTP3" text="TP3" />
+                              <Button layoutX="174.0" mnemonicParsing="false" onAction="#onClickButtonTP4" text="TP4" />
+                           </children>
+                        </Pane>
+                     </children>
+                  </GridPane>
+               </children>
+            </Pane>
+         </children>
+      </GridPane>
+   </children>
+</AnchorPane>
