--- a/resources/view/menu_scene_view.fxml
+++ b/resources/view/menu_scene_view.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
+<?import javafx.scene.control.ComboBox?>
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.MenuSceneController">
    <children>
       <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="401.0" prefWidth="603.0">
@@ -24,7 +25,7 @@
          <children>
             <Pane prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <HBox layoutX="48.0" layoutY="109.0" prefHeight="23.0" prefWidth="328.0">
+                  <HBox layoutX="48.0" layoutY="80.0" prefHeight="23.0" prefWidth="328.0">
                      <children>
                         <Pane>
                            <children>
@@ -49,11 +50,16 @@
                      </children>
                   </HBox>
                   <Pane layoutX="48.0" layoutY="58.0">
-                     <children>
-                        <Button mnemonicParsing="false" onAction="#saveImage" text="Cargar imagen" />
-                     </children>
+                      <children>
+                          <Button layoutX="48.0" layoutY="58.0" mnemonicParsing="false" onAction="#saveImage"
+                                  text="Cargar imagen"/>
+                          <Button layoutX="181.0" layoutY="100.0" mnemonicParsing="false" onAction="#showImage"
+                                  text="Mostrar imagen"/>
+                          <ComboBox fx:id="imageComboBox" layoutX="181.0" layoutY="58.0" prefWidth="90.0"
+                                    promptText="choose">
+                          </ComboBox>
+                      </children>
                   </Pane>
-                  <Button layoutX="181.0" layoutY="58.0" mnemonicParsing="false" onAction="#showImageScene" text="Mostrar imagen" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
