--- a/resources/view/menu_scene_view.fxml
+++ b/resources/view/menu_scene_view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -9,7 +10,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<?import javafx.scene.control.ComboBox?>
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.MenuSceneController">
    <children>
       <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="401.0" prefWidth="603.0">
@@ -51,13 +51,11 @@
                   </HBox>
                   <Pane layoutX="48.0" layoutY="58.0">
                       <children>
-                          <Button layoutX="48.0" layoutY="58.0" mnemonicParsing="false" onAction="#loadImage"
-                                  text="Cargar imagen"/>
-                          <Button layoutX="181.0" layoutY="100.0" mnemonicParsing="false" onAction="#showImage"
-                                  text="Mostrar imagen"/>
-                          <ComboBox fx:id="imageComboBox" layoutX="181.0" layoutY="58.0" prefWidth="90.0"
-                                    promptText="choose">
+                          <Button layoutX="48.0" layoutY="58.0" mnemonicParsing="false" onAction="#loadImage" text="Cargar imagen" />
+                          <Button layoutX="181.0" layoutY="100.0" mnemonicParsing="false" onAction="#showImage" text="Mostrar imagen" />
+                          <ComboBox fx:id="imageComboBox" layoutX="181.0" layoutY="58.0" prefWidth="90.0" promptText="choose">
                           </ComboBox>
+                        <Button layoutX="48.0" layoutY="100.0" mnemonicParsing="false" onAction="#saveImage" text="Guardar imagen" />
                       </children>
                   </Pane>
                </children>
