--- a/resources/view/menu_scene_view.fxml
+++ b/resources/view/menu_scene_view.fxml
@@ -2,7 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -52,12 +54,14 @@
                   <Pane layoutX="48.0" layoutY="58.0">
                       <children>
                           <Button layoutX="48.0" layoutY="58.0" mnemonicParsing="false" onAction="#loadImage" text="Cargar imagen" />
-                          <Button layoutX="181.0" layoutY="100.0" mnemonicParsing="false" onAction="#showImage" text="Mostrar imagen" />
                           <ComboBox fx:id="imageComboBox" layoutX="181.0" layoutY="58.0" prefWidth="90.0" promptText="choose">
                           </ComboBox>
-                        <Button layoutX="48.0" layoutY="100.0" mnemonicParsing="false" onAction="#saveImage" text="Guardar imagen" />
+                        <Button layoutX="181.0" layoutY="99.0" mnemonicParsing="false" onAction="#saveImage" text="Guardar imagen" />
+                          <Button layoutX="48.0" layoutY="99.0" mnemonicParsing="false" onAction="#showImage" text="Mostrar imagen" />
                       </children>
                   </Pane>
+                  <TextField fx:id="fileNameInput" layoutX="376.0" layoutY="157.0" prefHeight="25.0" prefWidth="105.0" />
+                  <Label layoutX="376.0" layoutY="120.0" text="Nombre del archivo" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
