--- a/resources/view/image_view_scene_view.fxml
+++ b/resources/view/image_view_scene_view.fxml
@@ -1,23 +1,95 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.image.Image?>
-<GridPane xmlns="http://javafx.com/javafx"
-          xmlns:fx="http://javafx.com/fxml"
-          fx:controller="presentation.controller.ImageViewSceneController"
-          prefHeight="600.0" prefWidth="600.0">
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-    <children>
-        <ImageView fx:id="imageView"
-                   fitHeight="600.0"
-                   fitWidth="600.0"
-                   layoutX="600.0"
-                   layoutY="600.0"
-                   pickOnBounds="true"
-                   preserveRatio="true">
-
-        </ImageView>
-    </children>
-
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="1051.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.ImageViewSceneController">
+  <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="510.0" minWidth="10.0" prefWidth="488.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="607.0" minWidth="10.0" prefWidth="431.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="132.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+  </rowConstraints>
+   <children>
+      <Pane>
+         <children>
+            <Pane fx:id="imgViewPane">
+               <children>
+                  <ImageView fx:id="imageView" fitHeight="400.0" fitWidth="487.0" onMouseClicked="#obtainPixelValue" pickOnBounds="true" preserveRatio="true" />
+               </children>
+            </Pane>
+         </children>
+      </Pane>
+      <VBox prefHeight="81.0" prefWidth="132.0" GridPane.columnIndex="2">
+         <children>
+            <Pane prefHeight="37.0" prefWidth="132.0">
+               <children>
+                  <Label alignment="CENTER" layoutX="48.0" layoutY="5.0" text="Pixeles" textAlignment="CENTER" />
+               </children>
+            </Pane>
+            <Pane>
+               <children>
+                  <GridPane prefHeight="57.0" prefWidth="132.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="65.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="67.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="29.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="31.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Pane>
+                           <children>
+                              <Label contentDisplay="CENTER" layoutX="29.0" layoutY="6.0" text="X" textAlignment="CENTER" />
+                           </children>
+                        </Pane>
+                        <Pane GridPane.columnIndex="1">
+                           <children>
+                              <Label layoutX="27.0" layoutY="6.0" text="Y" />
+                           </children>
+                        </Pane>
+                        <TextField fx:id="pixelX" GridPane.rowIndex="1" />
+                        <TextField fx:id="pixelY" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                     </children>
+                  </GridPane>
+               </children>
+            </Pane>
+            <Pane />
+            <Pane prefHeight="41.0" prefWidth="132.0">
+               <children>
+                  <Label alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="52.0" layoutY="19.0" text="Valor" textAlignment="CENTER" />
+               </children>
+            </Pane>
+            <Pane>
+               <children>
+                  <TextField fx:id="pixelValue" layoutX="34.0" prefHeight="25.0" prefWidth="65.0" />
+               </children>
+            </Pane>
+            <Pane prefHeight="48.0" prefWidth="132.0">
+               <children>
+                  <Label layoutX="30.0" layoutY="27.0" text="Valores (RGB)" />
+               </children>
+            </Pane>
+            <Pane prefHeight="113.0" prefWidth="132.0">
+               <children>
+                  <Label layoutX="14.0" layoutY="24.0" text="R" />
+                  <Label layoutX="13.0" layoutY="48.0" text="G" />
+                  <Label layoutX="14.0" layoutY="72.0" text="B" />
+                  <TextField fx:id="pixelRValue" layoutX="55.0" layoutY="20.0" prefHeight="25.0" prefWidth="59.0" />
+                  <TextField fx:id="pixelGValue" layoutX="55.0" layoutY="44.0" prefHeight="25.0" prefWidth="59.0" />
+                  <TextField fx:id="pixelBValue" layoutX="55.0" layoutY="68.0" prefHeight="25.0" prefWidth="59.0" />
+               </children>
+            </Pane>
+         </children>
+      </VBox>
+   </children>
 </GridPane>
