--- a/resources/view/image_view_scene_view.fxml
+++ b/resources/view/image_view_scene_view.fxml
@@ -1,96 +1,110 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-          prefWidth="1051.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
-          fx:controller="presentation.controller.ImageViewSceneController">
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="1051.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.ImageViewSceneController">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="510.0" minWidth="10.0" prefWidth="488.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="607.0" minWidth="10.0" prefWidth="431.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="132.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="510.0" minWidth="10.0" prefWidth="488.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="607.0" minWidth="10.0" prefWidth="431.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="132.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
         <Pane>
             <children>
                 <Pane fx:id="imgViewPane">
                     <children>
-                        <ImageView fx:id="imageView" pickOnBounds="true" preserveRatio="true"/>
+                        <ImageView fx:id="imageView" pickOnBounds="true" preserveRatio="true" />
                     </children>
                 </Pane>
             </children>
         </Pane>
         <VBox prefHeight="81.0" prefWidth="132.0" GridPane.columnIndex="2">
             <children>
-                <Pane prefHeight="37.0" prefWidth="132.0">
+                <Pane prefHeight="17.0" prefWidth="132.0">
                     <children>
-                        <Label alignment="CENTER" layoutX="48.0" layoutY="5.0" text="Pixeles" textAlignment="CENTER"/>
+                        <Label alignment="CENTER" layoutX="48.0" prefHeight="8.0" prefWidth="36.0" text="Pixeles" textAlignment="CENTER" />
                     </children>
                 </Pane>
                 <Pane>
                     <children>
                         <GridPane prefHeight="57.0" prefWidth="132.0">
                             <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="65.0"/>
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="67.0"/>
+                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="65.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="67.0" />
                             </columnConstraints>
                             <rowConstraints>
-                                <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="29.0" vgrow="SOMETIMES"/>
-                                <RowConstraints maxHeight="31.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES"/>
+                                <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="29.0" vgrow="SOMETIMES" />
+                                <RowConstraints maxHeight="31.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
-                                <Pane>
+                                <Pane prefHeight="18.0" prefWidth="68.0">
                                     <children>
-                                        <Label contentDisplay="CENTER" layoutX="29.0" layoutY="6.0" text="X"
-                                               textAlignment="CENTER"/>
+                                        <Label contentDisplay="CENTER" layoutX="29.0" layoutY="6.0" text="X" textAlignment="CENTER" />
                                     </children>
                                 </Pane>
                                 <Pane GridPane.columnIndex="1">
                                     <children>
-                                        <Label layoutX="27.0" layoutY="6.0" text="Y"/>
+                                        <Label layoutX="27.0" layoutY="6.0" text="Y" />
                                     </children>
                                 </Pane>
-                                <TextField fx:id="pixelX" GridPane.rowIndex="1"/>
-                                <TextField fx:id="pixelY" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                                <TextField fx:id="pixelX" GridPane.rowIndex="1" />
+                                <TextField fx:id="pixelY" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                             </children>
                         </GridPane>
                     </children>
                 </Pane>
-                <Pane/>
-                <Pane prefHeight="41.0" prefWidth="132.0">
+                <Pane />
+                <Pane prefHeight="57.0" prefWidth="132.0">
                     <children>
-                        <Label alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="52.0" layoutY="19.0"
-                               text="Valor" textAlignment="CENTER"/>
+                  <RadioButton fx:id="radioOriginal" layoutX="12.0" layoutY="6.0" mnemonicParsing="false" selected="true" text="Original">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="imageSelector" />
+                     </toggleGroup></RadioButton>
+                  <RadioButton fx:id="radioModificada" layoutX="12.0" layoutY="29.0" mnemonicParsing="false" text="Modificada" toggleGroup="$imageSelector" />
                     </children>
                 </Pane>
-                <Pane>
-                    <children>
-                        <TextField fx:id="pixelValue" layoutX="34.0" prefHeight="25.0" prefWidth="65.0"/>
-                    </children>
+                <Pane />
+                <Pane prefHeight="84.0" prefWidth="132.0">
+               <children>
+                        <TextField fx:id="pixelValue" layoutX="34.0" layoutY="53.0" prefHeight="25.0" prefWidth="65.0" />
+                        <Label alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="53.0" layoutY="35.0" text="Valor" textAlignment="CENTER" />
+                  <Button layoutX="36.0" layoutY="4.0" mnemonicParsing="false" onAction="#calcularValorPixel" text="Calcular" />
+               </children>
                 </Pane>
-                <Pane prefHeight="48.0" prefWidth="132.0">
-                    <children>
-                        <Label layoutX="30.0" layoutY="27.0" text="Valores (RGB)"/>
-                    </children>
-                </Pane>
-                <Pane prefHeight="113.0" prefWidth="132.0">
-                    <children>
-                        <Label layoutX="14.0" layoutY="24.0" text="R"/>
-                        <Label layoutX="13.0" layoutY="48.0" text="G"/>
-                        <Label layoutX="14.0" layoutY="72.0" text="B"/>
-                        <TextField fx:id="pixelRValue" layoutX="55.0" layoutY="20.0" prefHeight="25.0"
-                                   prefWidth="59.0"/>
-                        <TextField fx:id="pixelGValue" layoutX="55.0" layoutY="44.0" prefHeight="25.0"
-                                   prefWidth="59.0"/>
-                        <TextField fx:id="pixelBValue" layoutX="55.0" layoutY="68.0" prefHeight="25.0"
-                                   prefWidth="59.0"/>
-                    </children>
-                </Pane>
+            <Pane prefHeight="184.0" prefWidth="132.0">
+               <children>
+                  <Button layoutX="39.0" layoutY="108.0" mnemonicParsing="false" onAction="#modificarValorPixel" text="Modificar" />
+                  <Label layoutX="7.0" layoutY="141.0" text="Nuevo valor" />
+                  <TextField fx:id="nuevoValorPixel" layoutX="72.0" layoutY="137.0" prefHeight="17.0" prefWidth="58.0" />
+                        <Label layoutX="17.0" layoutY="33.0" text="R" />
+                        <Label layoutX="16.0" layoutY="57.0" text="G" />
+                        <Label layoutX="17.0" layoutY="81.0" text="B" />
+                        <TextField fx:id="pixelRValue" layoutX="58.0" layoutY="29.0" prefHeight="25.0" prefWidth="59.0" />
+                        <TextField fx:id="pixelGValue" layoutX="58.0" layoutY="53.0" prefHeight="25.0" prefWidth="59.0" />
+                        <TextField fx:id="pixelBValue" layoutX="58.0" layoutY="77.0" prefHeight="25.0" prefWidth="59.0" />
+                        <Label layoutX="31.0" layoutY="4.0" prefHeight="17.0" prefWidth="72.0" text="Valores (RGB)" />
+                  <Label fx:id="ingreseValorLabel" layoutX="22.0" layoutY="162.0" prefHeight="17.0" prefWidth="89.0" />
+               </children>
+            </Pane>
             </children>
         </VBox>
+      <Pane GridPane.columnIndex="1">
+         <children>
+            <ImageView fx:id="modifiedImageView" pickOnBounds="true" preserveRatio="true" />
+         </children>
+      </Pane>
     </children>
 </GridPane>
