--- a/resources/view/menu_scene_view.fxml
+++ b/resources/view/menu_scene_view.fxml
@@ -23,31 +23,31 @@
             <children>
                 <Pane prefHeight="200.0" prefWidth="200.0">
                     <children>
-                        <Pane layoutX="48.0" layoutY="58.0">
+                        <Pane layoutX="47.0" layoutY="62.0" prefHeight="94.0" prefWidth="302.0">
                             <children>
-                                <Button layoutX="48.0" layoutY="58.0" mnemonicParsing="false" onAction="#loadImage" text="Cargar imagen" />
-                                <ComboBox fx:id="imageComboBox" layoutX="181.0" layoutY="58.0" prefHeight="27.0" prefWidth="114.0" promptText="choose">
+                                <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#loadImage" text="Cargar imagen" />
+                                <ComboBox fx:id="imageComboBox" layoutX="149.0" layoutY="14.0" prefHeight="27.0" prefWidth="114.0" promptText="choose">
                                 </ComboBox>
-                                <Button layoutX="181.0" layoutY="99.0" mnemonicParsing="false" onAction="#saveImage" text="Guardar imagen" />
-                                <Button layoutX="48.0" layoutY="99.0" mnemonicParsing="false" onAction="#showImage" text="Mostrar imagen" />
+                                <Button layoutX="148.0" layoutY="63.0" mnemonicParsing="false" onAction="#saveImage" text="Guardar imagen" />
+                                <Button layoutX="11.0" layoutY="63.0" mnemonicParsing="false" onAction="#showImage" text="Mostrar imagen" />
+                                <Button layoutX="272.0" layoutY="14.0" mnemonicParsing="false" text="R" onAction="#reloadImages"/>
                             </children>
                         </Pane>
                     </children>
                 </Pane>
                 <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                     <children>
-                        <GridPane layoutY="-19.0" prefHeight="25.0" prefWidth="603.0">
+                        <GridPane layoutY="-19.0" prefHeight="25.0" prefWidth="225.0">
                             <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             </columnConstraints>
                             <rowConstraints>
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
-                                <Pane prefHeight="25.0" prefWidth="236.0">
+                                <Pane prefHeight="25.0" prefWidth="189.0">
                                     <children>
-                                        <Button contentDisplay="CENTER" layoutX="35.0" mnemonicParsing="false" onAction="#onClickButtonTP1" text="TP 1" textAlignment="CENTER" />
+                                        <Button layoutX="35.0" mnemonicParsing="false" onAction="#onClickButtonTP1" text="TP 1" />
                                         <Button layoutX="84.0" mnemonicParsing="false" onAction="#onClickButtonTP2" text="TP2" />
                                         <Button layoutX="129.0" mnemonicParsing="false" onAction="#onClickButtonTP3" text="TP3" />
                                         <Button layoutX="174.0" mnemonicParsing="false" onAction="#onClickButtonTP4" text="TP4" />
