--- a/resources/view/image_view_scene_view.fxml
+++ b/resources/view/image_view_scene_view.fxml
@@ -80,6 +80,7 @@
                      </children>
                   </Pane>
                             <Button alignment="CENTER" layoutX="28.0" layoutY="100.0" mnemonicParsing="false" onAction="#modifyPixelValue" text="Modificar" />
+                            <Button alignment="CENTER" layoutX="32.0" layoutY="156.0" mnemonicParsing="false" onAction="#saveModifiedImage" text="Guardar" />
                     </children>
                 </Pane>
             </children>
