--- a/resources/view/menu_scene_view.fxml
+++ b/resources/view/menu_scene_view.fxml
@@ -2,61 +2,58 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.MenuSceneController">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.MenuSceneController">
     <children>
-        <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="401.0" prefWidth="603.0">
+        <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="209.0" prefWidth="603.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="603.0" minWidth="10.0" prefWidth="603.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="0.0" prefWidth="0.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="268.0" minHeight="10.0" prefHeight="268.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="127.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="268.0" minHeight="10.0" prefHeight="124.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="268.0" minHeight="0.0" prefHeight="66.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Pane prefHeight="200.0" prefWidth="200.0">
+                <Pane prefHeight="123.0" prefWidth="603.0">
                     <children>
-                        <Pane layoutX="47.0" layoutY="62.0" prefHeight="94.0" prefWidth="302.0">
+                        <Pane layoutX="14.0" layoutY="49.0" prefHeight="71.0" prefWidth="433.0">
                             <children>
-                                <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#loadImage" text="Cargar imagen" />
-                                <ComboBox fx:id="imageComboBox" layoutX="149.0" layoutY="14.0" prefHeight="27.0" prefWidth="114.0" promptText="choose">
+                                <Button layoutX="13.0" layoutY="2.0" mnemonicParsing="false" onAction="#loadImage" text="Cargar imagen" />
+                                <ComboBox fx:id="imageComboBox" layoutX="149.0" layoutY="1.0" prefHeight="27.0" prefWidth="114.0" promptText="seleccionar...">
                                 </ComboBox>
-                                <Button layoutX="148.0" layoutY="63.0" mnemonicParsing="false" onAction="#saveImage" text="Guardar imagen" />
-                                <Button layoutX="11.0" layoutY="63.0" mnemonicParsing="false" onAction="#showImage" text="Mostrar imagen" />
-                                <Button layoutX="272.0" layoutY="14.0" mnemonicParsing="false" text="R" onAction="#reloadImages"/>
+                                <Button layoutX="149.0" layoutY="39.0" mnemonicParsing="false" onAction="#saveImage" text="Guardar imagen" />
+                                <Button layoutX="9.0" layoutY="39.0" mnemonicParsing="false" onAction="#showImage" text="Mostrar imagen" />
+                                <Button layoutX="272.0" layoutY="2.0" mnemonicParsing="false" onAction="#reloadImages" prefHeight="25.0" prefWidth="101.0" text="Refrescar lista" />
                             </children>
                         </Pane>
+                  <Label layoutX="29.0" layoutY="2.0" prefHeight="47.0" prefWidth="264.0" text="Carga y guardado de imagenes">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
                     </children>
                 </Pane>
-                <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
-                    <children>
-                        <GridPane layoutY="-19.0" prefHeight="25.0" prefWidth="225.0">
-                            <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            </columnConstraints>
-                            <rowConstraints>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            </rowConstraints>
-                            <children>
-                                <Pane prefHeight="25.0" prefWidth="189.0">
-                                    <children>
-                                        <Button layoutX="35.0" mnemonicParsing="false" onAction="#onClickButtonTP1" text="TP 1" />
-                                        <Button layoutX="84.0" mnemonicParsing="false" onAction="#onClickButtonTP2" text="TP2" />
-                                        <Button layoutX="129.0" mnemonicParsing="false" onAction="#onClickButtonTP3" text="TP3" />
-                                        <Button layoutX="174.0" mnemonicParsing="false" onAction="#onClickButtonTP4" text="TP4" />
-                                    </children>
-                                </Pane>
-                            </children>
-                        </GridPane>
-                    </children>
-                </Pane>
+            <Pane prefHeight="75.0" prefWidth="603.0" GridPane.rowIndex="1">
+               <children>
+                  <Label layoutX="33.0" layoutY="1.0" prefHeight="27.0" prefWidth="168.0" text="Generación">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="33.0" layoutY="43.0" mnemonicParsing="false" onAction="#showGreyGradient" text="Degradee grises" />
+                  <Button layoutX="154.0" layoutY="43.0" mnemonicParsing="false" text="Degradee colores" />
+                  <Button layoutX="282.0" layoutY="43.0" mnemonicParsing="false" text="Circulo blanco" />
+                  <Button layoutX="393.0" layoutY="43.0" mnemonicParsing="false" text="Cuadrado blanco" />
+               </children>
+            </Pane>
             </children>
         </GridPane>
     </children>
