--- a/resources/view/image_view_scene_view.fxml
+++ b/resources/view/image_view_scene_view.fxml
@@ -85,7 +85,8 @@
                      </children>
                   </Pane>
                             <Button alignment="CENTER" layoutX="28.0" layoutY="100.0" mnemonicParsing="false" onAction="#modifyPixelValue" text="Modificar" />
-                            <Button alignment="CENTER" layoutX="32.0" layoutY="156.0" mnemonicParsing="false" onAction="#saveModifiedImage" text="Guardar" />
+                            <Button alignment="CENTER" layoutX="32.0" layoutY="140.0" mnemonicParsing="false" onAction="#saveModifiedImage" text="Guardar" />
+                            <Button fx:id="inform" layoutX="33.0" layoutY="182.0" mnemonicParsing="false" text="Informe" visible="false" onAction="#showPartialImageInform"/>
                     </children>
                 </Pane>
             </children>
