--- a/resources/view/menu_scene_view.fxml
+++ b/resources/view/menu_scene_view.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.MenuSceneController">
+<AnchorPane xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.MenuSceneController">
     <children>
         <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="209.0" prefWidth="603.0">
             <columnConstraints>
@@ -27,14 +27,14 @@
                         <Pane layoutX="14.0" layoutY="49.0" prefHeight="71.0" prefWidth="433.0">
                             <children>
                                 <Button layoutX="13.0" layoutY="2.0" mnemonicParsing="false" onAction="#loadImage" text="Cargar imagen" />
-                                <ComboBox fx:id="imageComboBox" layoutX="149.0" layoutY="1.0" prefHeight="27.0" prefWidth="114.0" promptText="seleccionar...">
+                                <ComboBox fx:id="imageComboBox" layoutX="149.0" layoutY="1.0" prefHeight="27.0" prefWidth="122.0" promptText="seleccionar">
                                 </ComboBox>
                                 <Button layoutX="149.0" layoutY="39.0" mnemonicParsing="false" onAction="#saveImage" text="Guardar imagen" />
                                 <Button layoutX="9.0" layoutY="39.0" mnemonicParsing="false" onAction="#showImage" text="Mostrar imagen" />
-                                <Button layoutX="272.0" layoutY="2.0" mnemonicParsing="false" onAction="#reloadImages" prefHeight="25.0" prefWidth="101.0" text="Refrescar lista" />
+                                <Button layoutX="288.0" layoutY="2.0" mnemonicParsing="false" onAction="#reloadImages" prefHeight="25.0" prefWidth="101.0" text="Refrescar" />
                             </children>
                         </Pane>
-                  <Label layoutX="29.0" layoutY="2.0" prefHeight="47.0" prefWidth="264.0" text="Carga y guardado de imagenes">
+                  <Label layoutX="29.0" layoutY="2.0" prefHeight="47.0" prefWidth="273.0" text="Carga y guardado de imagenes">
                      <font>
                         <Font size="18.0" />
                      </font>
