--- a/resources/view/channel_scene_view.fxml
+++ b/resources/view/channel_scene_view.fxml
@@ -2,14 +2,14 @@
 
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.BorderPane?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.ChannelSceneController">
+<AnchorPane prefHeight="343.0" prefWidth="569.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.ChannelSceneController">
     <children>
-        <Pane layoutX="58.0" layoutY="38.0" prefHeight="316.0" prefWidth="522.0">
-            <children>
-                <ImageView fx:id="imageView" pickOnBounds="true" preserveRatio="true" />
-            </children>
-        </Pane>
+      <BorderPane layoutX="24.0" layoutY="14.0" prefHeight="316.0" prefWidth="522.0">
+         <center>
+                <ImageView fx:id="imageView" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
+         </center>
+      </BorderPane>
     </children>
 </AnchorPane>
