--- a/resources/view/image_figure_scene_view.fxml
+++ b/resources/view/image_figure_scene_view.fxml
@@ -11,7 +11,7 @@
          <children>
             <ImageView fx:id="imageView" fitHeight="300.0" fitWidth="510.0" pickOnBounds="true" preserveRatio="true" />
          </children>
-         <Button alignment="CENTER" layoutX="380.0" layoutY="156.0" mnemonicParsing="false" onAction="#saveImageFigure" text="Guardar" />
+         <Button alignment="CENTER" layoutX="380.0" layoutY="156.0" mnemonicParsing="false" onAction="#saveImageFigure" text="Save" />
       </Pane>
    </children>
 </AnchorPane>
