--- a/resources/view/main_scene_view.fxml
+++ b/resources/view/main_scene_view.fxml
@@ -81,6 +81,10 @@
             <Menu mnemonicParsing="false" text="Space Domain">
                 <MenuItem mnemonicParsing="false" onAction="#calculateNegativeImage" text="Negative" />
                 <MenuItem mnemonicParsing="false" onAction="#threshold" text="Threshold" />
+                <Menu mnemonicParsing="false" text="Histogram">
+                    <MenuItem mnemonicParsing="false" onAction="#createImageHistogram" text="Create" />
+                    <MenuItem mnemonicParsing="false" onAction="#createEqualizedImage" text="Equalize Image" />
+                </Menu>
             </Menu>
             <MenuItem mnemonicParsing="false" onAction="#cutPartialImage" text="Cut" />
             <MenuItem mnemonicParsing="false" onAction="#showReport" text="Report" />
@@ -102,9 +106,6 @@
             <MenuItem mnemonicParsing="false" onAction="#showHueHSVChannel" text="HSV Hue" />
             <MenuItem mnemonicParsing="false" onAction="#showSaturationHSVChannel" text="HSV Saturation" />
             <MenuItem mnemonicParsing="false" onAction="#showValueHSVChannel" text="HSV Value" />
-        </Menu>
-        <Menu mnemonicParsing="false" text="Histogram">
-            <MenuItem mnemonicParsing="false" onAction="#createImageHistogram" text="Create" />
         </Menu>
     </MenuBar>
 </AnchorPane>
